<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
 <name>humanoid_bt</name>
 <version>0.0.1</version>
 <description>behavior trees for executing generalist humanoid navigation and elevator riding</description>
 <maintainer email="kushalagarwal444@gmail.com">user</maintainer>
 <license>Apache-2.0</license>

 <buildtool_depend>ament_cmake</buildtool_depend>

 <depend>behaviortree_ros2</depend>

 <test_depend>ament_lint_auto</test_depend>
 <test_depend>ament_lint_common</test_depend>
 <test_depend>ament_cmake_gtest</test_depend>
 <test_depend>behaviortree_cpp</test_depend>

 <export>
   <build_type>ament_cmake</build_type>
 </export>
</package>